set up parcel bundle

--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>Lava Maze</title>
-  <head>
-    <script src="https://pixijs.download/release/pixi.js"></script>
-  </head>
+  <head></head>
   <style>
     html,
     body {
@@ -12,6 +10,6 @@
     }
   </style>
   <body>
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./app.ts"></script>
   </body>
 </html>
